# histoseg

./: .gitignore  LICENSE  Makefile  README.md  cli.py  compile_ops.sh  install.sh  pyproject.toml  requirements.txt  setup.py  train_simple.py
.github/instructions/: myinstructions.instructions.md
.github/prompts/: myfirstprompt.prompt.md
configs/: ade20k.yaml  ade20k_reference.yaml  trainer.yaml  vit_adapter.yaml
docs/: ade20k_integration.md
examples/: Fine_tune_MaskFormer_on_an_instance_segmentation_dataset_(ADE20k_full).ipynb  ade20k_configs.py  cli_usage_example.py  test_ade20k_datamodule.py
histoseg/: __init__.py  cli.py
histoseg/data/: __init__.py  base_datamodule.py  datasets.py  datasets_wip.py  dm_ade20k.py  dm_pannuke.py  mappings.py  test_dm_pannuke.py  transforms.py  zip_dataset.py
histoseg/models/: __init__.py  configuration_mask2former.py  mask2former_model.py
histoseg/models/decoder/: __init__.py  mask2former_pixel_decoder.py
histoseg/models/encoder/: __init__.py  adapter_modules.py  encoders.py  vit_adapter.py  vit_backbone.py
histoseg/models/ops/: __init__.py  make.sh  ms_deform_attn.py
histoseg/models/ops/functions/: ms_deform_attn_func.py
histoseg/models/ops/modules/: ms_deform_attn.py
histoseg/models/ops/src/: ms_deform_attn.cpp  ms_deform_attn_cuda.cu  vision.cpp
histoseg/training/: __init__.py  histoseg_module.py  mask2former_module.py
histoseg/utils/: __init__.py  io.py  visualization.py
notebooks/: explo_ade20k.ipynb  pannuke_dataset.ipynb
scripts/: inference.py  prepare_ade20k.py
